# pandas-sqlalchemy-tutorial

./: .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
pandas_sqlalchemy_tutorial/: __init__.py  database.py
tutorial/: __init__.py  database.py  read.py
